--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.25.0",
     "daisyui": "^1.24.3",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-google-gtag": "^4.7.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sharp": "^4.6.0",
