--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "gatsby-plugin-google-gtag": "^4.7.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-sitemap": "^5.8.0",
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-transformer-json": "^4.6.0",
     "gatsby-transformer-remark": "^5.5.2",
