Major reformatting update: Redesigned all sections and formatting across the site.  Added a Blog section and recent content.

--- a/.env.example
+++ b/.env.example
@@ -1,184 +1,16 @@
-# ====================
-# Environment Variables Template
-# ====================
-# 
-# Copy this file to .env.development and .env.production
-# and fill in your actual values.
-#
-# IMPORTANT: 
-# - Never commit real .env files to git
-# - Keep sensitive values secure
-# - Use different values for development vs production
-#
-# ====================
+# Gatsby Environment Variables Example
+# Copy this file to .env and fill in your actual values
 
-# ====================
 # Site Configuration
-# ====================
+GATSBY_SITE_TITLE="My Personal Website"
+GATSBY_SITE_DESCRIPTION="Welcome to my site where I talk a little about myself."
+GATSBY_SITE_URL="https://www.synepho.com"
 
-# Your website URL (no trailing slash)
-# Development: http://localhost:8000
-# Production: https://synepho.com
-GATSBY_SITE_URL=https://synepho.com
+# Analytics
+GATSBY_GOOGLE_ANALYTICS_ID="G-2HLT4VSZHW"
 
-# Site title for meta tags
-GATSBY_SITE_TITLE="John Xanthopoulos - Personal Website"
+# Development
+NODE_ENV="development"
 
-# Site description for SEO
-GATSBY_SITE_DESCRIPTION="IT Executive and Developer - Personal portfolio showcasing cloud technologies and leadership experience"
-
-# ====================
-# Analytics & Tracking
-# ====================
-
-# Google Analytics 4 Measurement ID
-# Get from: https://analytics.google.com/
-# Format: G-XXXXXXXXXX
-GATSBY_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
-
-# Google Tag Manager ID (if using GTM instead)
-# Format: GTM-XXXXXXX
-# GATSBY_GTM_ID=GTM-XXXXXXX
-
-# Hotjar Site ID (if using Hotjar)
-# GATSBY_HOTJAR_ID=1234567
-
-# ====================
-# AWS Configuration
-# ====================
-
-# AWS Region for your S3 bucket
-AWS_REGION=us-east-1
-
-# S3 Bucket name for static website hosting
-AWS_S3_BUCKET=www.synepho.com
-
-# CloudFront Distribution ID (for cache invalidation)
-# Get from AWS CloudFront console
-# AWS_CLOUDFRONT_DISTRIBUTION_ID=E1ABCDEFGHIJKL
-
-# ====================
-# Content Management
-# ====================
-
-# Contentful Space ID (if using Contentful CMS)
-# CONTENTFUL_SPACE_ID=your_space_id_here
-
-# Contentful Access Token (Content Delivery API)
-# CONTENTFUL_ACCESS_TOKEN=your_access_token_here
-
-# Contentful Preview Token (for draft content)
-# CONTENTFUL_PREVIEW_TOKEN=your_preview_token_here
-
-# ====================
-# Contact Form & Email
-# ====================
-
-# Netlify Forms (if using Netlify for forms)
-# No additional config needed - just deploy to Netlify
-
-# EmailJS Configuration (if using EmailJS for contact forms)
-# Get from: https://www.emailjs.com/
-# GATSBY_EMAILJS_SERVICE_ID=service_xxxxxxx
-# GATSBY_EMAILJS_TEMPLATE_ID=template_xxxxxxx
-# GATSBY_EMAILJS_USER_ID=user_xxxxxxxxxxxxxxxxxxxxxx
-
-# Formspree Endpoint (if using Formspree for contact forms)
-# Get from: https://formspree.io/
-# GATSBY_FORMSPREE_ENDPOINT=https://formspree.io/f/xxxxxxxd
-
-# ====================
-# API Integrations
-# ====================
-
-# GitHub API Token (for fetching repositories)
-# Get from: https://github.com/settings/tokens
-# GITHUB_API_TOKEN=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-# LinkedIn API (if integrating LinkedIn data)
-# LINKEDIN_CLIENT_ID=your_client_id
-# LINKEDIN_CLIENT_SECRET=your_client_secret
-
-# ====================
-# Development Tools
-# ====================
-
-# Enable Gatsby development tools
-GATSBY_DEVELOP=true
-
-# Show GraphQL playground in development
-GATSBY_GRAPHQL_PLAYGROUND=true
-
-# Enable source maps in production (for debugging)
-# GENERATE_SOURCEMAP=true
-
-# ====================
-# Security & Performance
-# ====================
-
-# Content Security Policy settings
-# CSP_REPORT_URI=https://your-domain.report-uri.com/r/d/csp/enforce
-
-# Sentry DSN for error tracking
-# Get from: https://sentry.io/
-# SENTRY_DSN=https://xxxxxxxxxxxxxxxxxxxxxxxxxxxxx@sentry.io/xxxxxxx
-
-# Environment indicator (development, staging, production)
-NODE_ENV=production
-
-# ====================
-# Feature Flags
-# ====================
-
-# Enable/disable specific features
-GATSBY_ENABLE_BLOG=false
-GATSBY_ENABLE_DARK_MODE=true
-GATSBY_ENABLE_ANALYTICS=true
-GATSBY_ENABLE_CONTACT_FORM=true
-
-# ====================
-# Social Media
-# ====================
-
-# Twitter/X API (for embedding tweets)
-# TWITTER_BEARER_TOKEN=your_bearer_token_here
-
-# YouTube API (for embedding videos)
-# YOUTUBE_API_KEY=your_api_key_here
-
-# ====================
-# Build Configuration
-# ====================
-
-# Gatsby build flags
-GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true
-GATSBY_CPU_COUNT=2
-
-# Enable incremental builds
-GATSBY_INCREMENTAL_BUILDS=true
-
-# ====================
-# Custom Environment Variables
-# ====================
-
-# Add your project-specific variables here
-# GATSBY_CUSTOM_VARIABLE=your_value_here
-
-# ====================
-# Notes
-# ====================
-#
-# Variable Naming Convention:
-# - GATSBY_ prefix: Available in browser (public)
-# - No prefix: Server-side only (private)
-#
-# Security Guidelines:
-# - Never expose API secrets with GATSBY_ prefix
-# - Use server-side variables for sensitive data
-# - Different values for dev/staging/production
-#
-# Usage in Code:
-# - Access with: process.env.GATSBY_SITE_URL
-# - Always provide fallbacks: process.env.GATSBY_SITE_URL || 'https://localhost:8000'
-#
-# ====================
+# Note: All variables prefixed with GATSBY_ are exposed to the browser
+# Keep sensitive information in server-only variables (without GATSBY_ prefix)
