--- a/src/content/projects.json
+++ b/src/content/projects.json
@@ -3,7 +3,7 @@
     "id": 1,
     "name": "Tesla App",
     "image": "../images/tesla-app.png",
-    "text": "React based app that uses the Geolocation api within a Tesla car browser to provide real-time weather, traffic, news, and local Yelp points of interest.  My initial use-case was to create a default homepage in your vehicle to get local information before leaving for your next destination.  Unfortunately, in the recent V11 update Tesla disabled the Geolcation api in the browser and it currently doesn’t work as expected.  I am currently looking into workarounds or a possible opportunity of a Tesla App store where I can furhte expand my concept.",
+    "text": "React-based application that uses the Geolocation API within a Tesla car browser to provide real-time weather, traffic, news, and local Yelp points of interest. My initial use-case was to create a default homepage in your vehicle to get local information before leaving for your next destination. Unfortunately, in the recent V11 update Tesla disabled the Geolocation API in the browser and it currently doesn't work as expected. I am currently looking into workarounds or a possible opportunity of a Tesla App store where I can further expand my concept.",
     "demo_link": "https://teslaweather.netlify.app/",
     "github_link": "https://github.com/jxman/tesla-app"
   },
@@ -11,7 +11,7 @@
     "id": 2,
     "name": "Gatsby Personal Branding Site",
     "image": "../images/personal-site.png",
-    "text": "This site which I created using Gatsby which is a React-based framework that allows you to be build a web experience focused on speed, scale and security.  Additionally, the site uses styling based on the tailwindcss framework as well as components from daisyUI.  My overall goal for the site was to create a simple and clean hosted site where I can showcase my personal brand and gain some hands-on skills with the latest technologies.",
+    "text": "This site which I created using Gatsby, a React-based framework that allows you to build a web experience focused on speed, scale and security. Additionally, the site uses styling based on the Tailwind CSS framework as well as components from DaisyUI. My overall goal for the site was to create a simple and clean hosted site where I can showcase my personal brand and gain hands-on skills with the latest technologies.",
     "demo_link": "https://synepho.com/",
     "github_link": "https://github.com/jxman/gatsby-personal-site"
   },
@@ -19,7 +19,7 @@
     "id": 3,
     "name": "AWS Multi-region Hosted Site",
     "image": "../images/aws-site.png",
-    "text": "Instead of going with a hosting provider like Netlify or Vercel, I wanted to create my own Production-Grade and fully redundant site within Amazon Web Services.  Click below to view more details on the design which includes multi-region hosting, CDN caching and automated TLS key renewals.  All the AWS resources for this project have been built and configured using Terraform code and fully automated.  (See my Github repo below for more details.)",
+    "text": "Instead of going with a hosting provider like Netlify or Vercel, I wanted to create my own production-grade and fully redundant site within Amazon Web Services. Click below to view more details on the design which includes multi-region hosting, CDN caching and automated TLS key renewals. All the AWS resources for this project have been built and configured using Terraform code and fully automated. (See my Github repo below for more details.)",
     "demo_link": "../awssite/",
     "github_link": "https://github.com/jxman/synepho-s3cf-site"
   },
@@ -27,7 +27,7 @@
     "id": 4,
     "name": "AWS RSS Status Check Site",
     "image": "../images/awsrss.png",
-    "text": "A Node.js app running on to AWS Lambda with a DynamoDB backend and using the Serverless Framework (https://www.serverless.com/).  This app is designed to scan a list 3rd Party vendor RSS Status pages and alert on any notifications for outages and/or maintenance updates.  Once a vendor reports an issue an alert is sent to a pre-defined webhook and the state of the alert is managed within a DynamoDB table.  Currently I am working on a React web based front-end to both admin the listing of sites and view the status of alerts.",
+    "text": "A Node.js app running on AWS Lambda with a DynamoDB backend and using the Serverless Framework. This app is designed to scan a list of 3rd party vendor RSS status pages and alert on any notifications for outages and/or maintenance updates. Once a vendor reports an issue, an alert is sent to a pre-defined webhook and the state of the alert is managed within a DynamoDB table. Currently I am working on a React web-based front-end to both admin the listing of sites and view the status of alerts.",
     "demo_link": "../awsrss/",
     "github_link": "https://github.com/jxman/awsrsschk"
   },
@@ -35,7 +35,7 @@
     "id": 5,
     "name": "My Lawn",
     "image": "../images/lawn1.jpeg",
-    "text": "A custom blend of Kentucky Bluegrass and Perennial Rye, working on my lawn is one of my favorite projects.  Nothing makes me prouder than seeing those vibrant lawn strips while I sit outside with family and friends to enjoy a nice BBQ.",
+    "text": "A custom blend of Kentucky Bluegrass and Perennial Rye. Working on my lawn is one of my favorite projects - nothing makes me prouder than seeing those vibrant lawn stripes while I sit outside with family and friends to enjoy a nice BBQ. This project showcases attention to detail and dedication to quality results.",
     "demo_link": "../lawn/",
     "github_link": "https://github.com/jxman/"
   }
