--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby clean && gatsby build",
-    "deploy": "aws s3 sync ./public/ s3://www.synepho.com --delete",
+    "deploy": "aws s3 sync ./public/ s3://www.synepho.com --delete --cache-control max-age=31536000 --exclude='*.html' && aws s3 sync ./public/ s3://www.synepho.com --delete --cache-control max-age=0 --include='*.html'",
     "build-and-deploy": "npm run build && npm run deploy",
     "package": "zip -FSr -X build.zip ./public/",
     "deploy-manual": "aws s3 sync ./public/ s3://www.synepho.com --delete",
@@ -25,6 +25,7 @@
     "gatsby": "^5.14.0",
     "gatsby-plugin-google-gtag": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-react-helmet": "^6.14.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.14.0",
